--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "wayke-valuation",
-  "version": "1.0.0",
+  "version": "0.0.1",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "webpack serve --config webpack.config.js --progress --profile --color --mode development",
+    "start": "webpack serve --config webpack.config.dev.js --progress --profile --color --mode development",
     "build": "webpack --config webpack.config.js --progress --profile --bail --mode production",
     "prebuild": "npm run clean",
     "clean": "rimraf ./build",
@@ -19,6 +19,7 @@
     "@typescript-eslint/eslint-plugin": "^4.6.0",
     "@typescript-eslint/parser": "^4.6.0",
     "css-loader": "^5.0.0",
+    "dotenv": "^8.2.0",
     "eslint": "^7.12.1",
     "eslint-config-prettier": "^6.15.0",
     "eslint-plugin-import": "^2.22.1",
@@ -34,6 +35,7 @@
     "typescript": "^4.0.5",
     "webpack": "^5.3.0",
     "webpack-cli": "^4.1.0",
-    "webpack-dev-server": "^3.11.0"
+    "webpack-dev-server": "^3.11.0",
+    "webpack-merge": "^5.4.0"
   }
 }
