--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "start": "webpack serve --config webpack.config.dev.js --progress --profile --color --mode development",
     "build": "webpack --config webpack.config.js --progress --profile --bail --mode production",
+    "build:dev": "webpack --config webpack.config.js --progress --profile --bail --mode development",
     "prebuild": "npm run clean",
+    "prebuild:dev": "npm run clean",
     "clean": "rimraf ./build",
     "lint": "eslint -c .eslintrc.js --ext .ts 'src/**/*.{ts,tsx}'",
     "prettify": "prettier --write 'src/**/*.{ts,tsx}'",
