--- a/package.json
+++ b/package.json
@@ -39,5 +39,8 @@
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^5.1.0",
     "webpack-merge": "^5.10.0"
+  },
+  "dependencies": {
+    "dompurify": "^3.2.0"
   }
 }
